# UnB_PC

./: CMakeLists.txt  consumidor.c  consumidor_semaforo.c  hello.c  teste.c
Estudo Dirigido/: barreira.c  estudo_dirigido_3.c  estudo_dirigido_5.c  estudo_dirigido_6.c  estudo_dirigido_7.c  estudo_dirigido_8.c
Exercicios aula/: macacos.c  parque.c
Extras/: cond.c  macacos.c
Slide/: parque.c
